force-app/main/default/objects/vlocity_cmt__PriceList__c/vlocity_cmt__PriceList__c.object-meta.xml
<CustomObject>
    <label>PriceList</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>