force-app/main/default/objects/vlocity_cmt__PriceList__c/fields/vlocity_cmt__CountOfActiveEntries__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CountOfActiveEntries__c</fullName>
    <description>Count of active entries.This field rolls up the count of active price list entries present for this price list.</description>
    <label># of Entries</label>
    <summaryFilterItems>
        <field>vlocity_cmt__PriceListEntry__c.vlocity_cmt__IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_cmt__PriceListEntry__c.vlocity_cmt__PriceListId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>