force-app/main/default/objects/vlocity_cmt__PriceList__c/fields/vlocity_cmt__ParentPriceListId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentPriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Price List</label>
    <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
    <relationshipName>ChildPriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>