force-app/main/default/objects/vlocity_cmt__PriceList__c/recordTypes/vlocity_cmt__PriceList.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__PriceList</fullName>
    <active>true</active>
    <description>PriceList record</description>
    <label>PriceList</label>
</RecordType>