force-app/main/default/objects/vlocity_cmt__PriceList__c/validationRules/vlocity_cmt__EffectiveFromDate_Greater_UntilDate.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__EffectiveFromDate_Greater_UntilDate</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_cmt__EffectiveFromDate__c &gt; vlocity_cmt__EffectiveUntilDate__c</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__EffectiveUntilDate__c</errorDisplayField>
    <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
</ValidationRule>