force-app/main/default/objects/vlocity_cmt__PriceList__c/listViews/vlocity_cmt__Vlocity_EPC_Price_List.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__Vlocity_EPC_Price_List</fullName>
    <columns>vlocity_cmt__IsActive__c</columns>
    <columns>NAME</columns>
    <columns>vlocity_cmt__ParentPriceListId__c</columns>
    <columns>vlocity_cmt__Code__c</columns>
    <columns>vlocity_cmt__CountOfActiveEntries__c</columns>
    <columns>vlocity_cmt__EffectiveFromDate__c</columns>
    <columns>vlocity_cmt__EffectiveUntilDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Vlocity EPC Price List</label>
</ListView>